<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="app.com.appprestamo.fragment.SolicitarPrestamoFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/titulo_fragment_solicitar_prestamo"
        android:textSize="20sp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txtMontoSolicitado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/txtPlata"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:textSize="15sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp">

        <EditText
            android:id="@+id/txtDescripcionSolicitud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:hint="@string/txtDescripcion"
            android:inputType="textAutoComplete"
            android:textSize="15sp" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/acb_RecuperarContrasenia"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:clickable="false" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnSolicitarPrestamo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:clickable="true"
            android:text="@string/boton_solicitar_prestamo"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>
