<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".75"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_userName"
                    android:inputType="textPersonName"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:textSize="15sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp">

                <EditText
                    android:id="@+id/txtCorreo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_correo"
                    android:inputType="text"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:textSize="15sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilUserPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp">

                <EditText
                    android:id="@+id/txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_userpassword"
                    android:inputType="textPassword"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:textSize="15sp" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilApePat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp">

                <EditText
                    android:id="@+id/txtApePat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_apepat"
                    android:inputType="text"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:textSize="15sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilApeMat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp">

                <EditText
                    android:id="@+id/txtApeMat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_apemat"
                    android:inputType="text"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:textSize="15sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilTel"
                app:counterMaxLength="9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp">

                <EditText
                    android:id="@+id/txtTel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="9"
                    android:hint="@string/hint_telefono"
                    android:inputType="phone"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:textSize="15sp" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".25"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:clickable="false" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnRegistrarUsuario"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:clickable="true"
            android:text="@string/boton_registrar"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>
